Fix filter issue with z-index and props drilling

--- a/packages/venia-concept/@orienteed/csr/src/components/TicketFilter/ticketFilter.module.css
+++ b/packages/venia-concept/@orienteed/csr/src/components/TicketFilter/ticketFilter.module.css
@@ -21,7 +21,8 @@
     composes: text-colorDefault from global;
     composes: text-left from global;
     composes: top-[110%] from global;
-    composes: z-menu from global;
+    /* composes: z-menu from global; */
+    z-index: 9;
 }
 
 .menuItem {
